prototype drag and drop routing and refactor create task logic

--- a/public/static/style.css
+++ b/public/static/style.css
@@ -31,6 +31,10 @@ a {
     table-layout: fixed;
 }
 
+#mainTable tbody td {
+    position: relative;
+}
+
 #mainTable tr td:nth-child(1),
 #mainTable tr th:nth-child(1),
 #mainTable tr th:nth-child(4),
