add environment variable using on client

--- a/public/static/templates/antenna.html
+++ b/public/static/templates/antenna.html
@@ -137,53 +137,15 @@
     <div id="loading-modal">
         <img src="/public/static/img-loading.gif" width="80" height="80" alt="Now Loading..." />
     </div>
+    <script>
+        var env = JSON.parse('{{env}}');
+    </script>
     <script src='/public/static/myflow-client-util.js'></script>
     <script src='/public/static/myflow-client-core.js'></script>
     <script src='/public/static/myflow-client-consumer.js'></script>
     <script src='/public/static/myflow-client-components.js'></script>
+    <script src='/public/static/custom-reader-writer.js'></script>
     <script>
-        var trReader = new ElementReader(function(exchange) {
-            var element = exchange.getElement();
-            while (element.tagName.toLowerCase() !== 'tr') {
-                element = element.parentNode;
-            }
-            var thtdElements = element.querySelectorAll('th, td');
-            return {
-                'id': function() {
-                    return thtdElements[0].innerText;
-                },
-                'past': function() {
-                    return thtdElements[3].textContent;
-                },
-                'next': function() {
-                    return thtdElements[4].textContent;
-                },
-                'name': function() {
-                    return thtdElements[5].children[0].innerText;
-                },
-                'url': function() {
-                    return getOr(element.querySelector('.external'), 'href', '');
-                },
-                'memo': function() {
-                    return thtdElements[6].innerText;
-                },
-                'span': function() {
-                    return options.getIndexByText(thtdElements[1].innerHTML);
-                },
-                'current': function() {
-                    return thtdElements[4].innerText <= "{{now}}";
-                },
-                'future': function() {
-                    return thtdElements[4].innerText > "{{now}}";
-                },
-                'finish': function() {
-                    return (thtdElements[1].innerText === '一度' || thtdElements[1].innerText === '優先') && thtdElements[4].innerText <= "{{now}}";
-                },
-                'completed': function() {
-                    return thtdElements[1].innerText === '完了';
-                },
-            }
-        });
         selectAll('#mainTable tbody tr').forEach(function(element) {
             element.draggable = "true";
             element.ondragstart = function(event) {
